fix: APPS-3263 Fix FTVA PageAnchor alignment (#711)
* fix icon alignment, list alignment

* additional minor css fixes

---------

--- a/packages/vue-component-library/src/styles/ftva/_page-anchor.scss
+++ b/packages/vue-component-library/src/styles/ftva/_page-anchor.scss
@@ -1,25 +1,33 @@
 .ftva.page-anchor {
-    float: none;
 
     .page-anchor-content {
         padding: 4px;
     }
+
+    .dropdown-button {
+        
+        span.caret {
+            position: relative;
+            top: 5px;
+        }
+    }
+
     li.link, .dropdown-button {
         @include ftva-subtitle-2;
         color: var(--ftva-medium-blue);
         text-transform: unset;
-        align-self: flex-start;
         justify-content: flex-start;
         letter-spacing: normal;
     }
+
     .page-anchor-list,
     .link a { 
         @include ftva-subtitle-2;
         color: $subtitle-grey;
+        text-align: left;
         text-transform: unset;
         align-items: flex-start;
         justify-content: flex-start;
-        padding-left: 4px;
         letter-spacing: normal;
     }
     .link {
@@ -28,15 +36,18 @@
       }
     }
     .page-anchor-list {
+        padding-left: 8px;
+        padding-right: 4px;
 
         li.link {
             padding: 4px;
             &:last-child {
                 a {
                     color: var(--ftva-medium-blue);
-                    padding-left: 0px;;
+                    padding-left: 0px;
                 }
                 margin-top: 8px;
+                margin-left: -4px;
                 padding-left: 0px;
                 
             }
